--- a/share/qtcreator/qmljsdebugger/editor/editor.qrc
+++ b/share/qtcreator/qmljsdebugger/editor/editor.qrc
@@ -8,11 +8,9 @@
         <file>images/pause.png</file>
         <file>images/from-qml.png</file>
         <file>images/to-qml.png</file>
-        <file>images/designmode.png</file>
         <file>images/color-picker-hicontrast.png</file>
         <file>images/zoom.png</file>
         <file>images/color-picker-24.png</file>
-        <file>images/designmode-24.png</file>
         <file>images/from-qml-24.png</file>
         <file>images/pause-24.png</file>
         <file>images/play-24.png</file>
@@ -20,5 +18,7 @@
         <file>images/zoom-24.png</file>
         <file>images/select-24.png</file>
         <file>images/select-marquee-24.png</file>
+        <file>images/observermode.png</file>
+        <file>images/observermode-24.png</file>
     </qresource>
 </RCC>
