--- a/src/plugins/qt4projectmanager/wizards/wizards.qrc
+++ b/src/plugins/qt4projectmanager/wizards/wizards.qrc
@@ -3,5 +3,6 @@
         <file>images/console.png</file>
         <file>images/gui.png</file>
         <file>images/lib.png</file>
+        <file>images/qml_standalone.png</file>
     </qresource>
 </RCC>
