--- a/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
+++ b/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
@@ -31,7 +31,7 @@
      <property name="title">
       <string>Qml Modules</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QSplitter" name="splitter">
         <property name="orientation">
@@ -128,17 +128,19 @@
           </item>
          </layout>
         </widget>
-        <widget class="QLabel" name="errorLabel">
-         <property name="font">
-          <font>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>Error</string>
-         </property>
-        </widget>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="errorLabel">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Error</string>
+        </property>
        </widget>
       </item>
      </layout>
