--- a/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
+++ b/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
@@ -78,7 +78,7 @@
           <item row="0" column="0" colspan="2">
            <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>URIs</string>
+             <string>URIs (e.g. 'org.mydomain.MyQmlPlugin')</string>
             </property>
            </widget>
           </item>
