VCS[git]: Environment settings.
Make GitClient::synchronousGit use the process environment.

Windows: Add a setting to fake a 'HOME' environment variable
(%HOMEDRIVE%%HOMEPATH%) to make msysgit look for its SSH-keys
there not only when run from git bash, but also from Qt Creator.
Useful in MinGw-setups, where git must not be in the path.

--- a/src/plugins/git/settingspage.ui
+++ b/src/plugins/git/settingspage.ui
@@ -37,6 +37,13 @@
        </layout>
       </item>
       <item>
+       <widget class="QCheckBox" name="winHomeCheckBox">
+        <property name="text">
+         <string>Set &quot;HOME&quot; environment variable</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="noteHorizontalLayout">
         <item>
          <widget class="QLabel" name="noteLabel">
