--- a/src/plugins/qt4projectmanager/qt-maemo/maemoconfigtestdialog.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemoconfigtestdialog.ui
@@ -65,6 +65,9 @@
        <property name="text">
         <string/>
        </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
+       </property>
       </widget>
      </item>
      <item>
