--- a/src/plugins/find/finddialog.ui
+++ b/src/plugins/find/finddialog.ui
@@ -73,7 +73,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Search &amp;for:</string>
@@ -86,17 +86,10 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="2" column="1">
       <widget class="QLineEdit" name="searchTerm"/>
      </item>
-     <item row="1" column="2">
-      <widget class="QPushButton" name="closeButton">
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0" colspan="2">
+     <item row="7" column="0" colspan="2">
       <widget class="QWidget" name="configWidget" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -106,14 +99,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
-      <widget class="QPushButton" name="replaceButton">
-       <property name="text">
-        <string>Search &amp;&amp; Replace</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" rowspan="3">
+     <item row="4" column="1" rowspan="3">
       <widget class="QWidget" name="widget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <property name="margin">
@@ -143,6 +129,27 @@
        </layout>
       </widget>
      </item>
+     <item row="5" column="2">
+      <widget class="QPushButton" name="replaceButton">
+       <property name="text">
+        <string>Search &amp;&amp; Replace</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
+        <string>Cancel</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -164,8 +171,6 @@
   <tabstop>filterList</tabstop>
   <tabstop>searchTerm</tabstop>
   <tabstop>searchButton</tabstop>
-  <tabstop>closeButton</tabstop>
-  <tabstop>replaceButton</tabstop>
  </tabstops>
  <resources/>
  <connections/>
