Fixed capitalization for "Check All" button

--- a/src/plugins/qt4projectmanager/wizards/targetsetuppage.ui
+++ b/src/plugins/qt4projectmanager/wizards/targetsetuppage.ui
@@ -57,7 +57,7 @@
         <string>Uncheck all Qt versions</string>
        </property>
        <property name="text">
-        <string>Uncheck all</string>
+        <string>Uncheck All</string>
        </property>
       </widget>
      </item>
