Doc: fixing numeric lists

--- a/doc/templates/style/style.css
+++ b/doc/templates/style/style.css
@@ -35,6 +35,10 @@
     {
         list-style: none;
     }
+    ol li
+    {
+        list-style: decimal;
+    }	
     caption, th
     {
         text-align: left;
