Add option to restore last session at startup
 * Add an option to the session manager to restore the last
   session on startup of creator.
 * Align close button on session manager dialog with the other
   buttons.
 * Clean up handling of session restoration in the ProjectExplorer:
   Move all the relevant code into determineSessionToRestoreAtStartup,
   since most was there already.

Task-number: QTCREATORBUG-2324

--- a/src/plugins/projectexplorer/sessiondialog.ui
+++ b/src/plugins/projectexplorer/sessiondialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>370</width>
-    <height>260</height>
+    <width>373</width>
+    <height>282</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,14 @@
    <item row="0" column="0">
     <widget class="QListWidget" name="sessionList"/>
    </item>
-   <item row="0" column="1">
+   <item row="0" column="1" rowspan="2">
     <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>0</number>
+     </property>
      <item>
       <widget class="QPushButton" name="btCreateNew">
        <property name="text">
@@ -65,21 +71,31 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>85</width>
-         <height>13</height>
+         <height>48</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="1" column="0">
+    <widget class="QCheckBox" name="autoLoadCheckBox">
+     <property name="toolTip">
+      <string>Automatically restore the last session when Qt Creator is started.</string>
+     </property>
+     <property name="text">
+      <string>Restore last session on startup</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" rowspan="2">
+   <item row="3" column="0">
     <widget class="QLabel" name="whatsASessionLabel">
      <property name="text">
       <string>&lt;a href=&quot;qthelp://com.nokia.qtcreator/doc/creator-project-managing-sessions.html&quot;&gt;What is a Session?&lt;/a&gt;</string>
@@ -88,8 +104,20 @@
    </item>
    <item row="3" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Close</set>
+     </property>
+     <property name="centerButtons">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
