--- a/src/plugins/debugger/attachcoredialog.ui
+++ b/src/plugins/debugger/attachcoredialog.ui
@@ -38,7 +38,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="coreLabel">
        <property name="text">
-        <string>Core File:</string>
+        <string>Core file:</string>
        </property>
       </widget>
      </item>
