L10n: tr()-fixes, message strings, compiler warnings.
Rename 'QML standalone application' to 'QML application'
and the 'old-style' QML applications to
'QML Viewer based applications'.

For the QML renaming:
Rubber-stamped-by: Alessandro Portale <alessandro.portale@nokia.com>

--- a/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
+++ b/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizardsourcespage.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QGroupBox" name="mainQmlFileGroupBox">
      <property name="title">
-      <string>Main Qml file</string>
+      <string>Main QML file</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
@@ -29,7 +29,7 @@
    <item>
     <widget class="QGroupBox" name="qmlModulesGroupBox">
      <property name="title">
-      <string>Qml Modules</string>
+      <string>QML Modules</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
