--- a/src/plugins/qmljseditor/quicktoolbarsettingspage.ui
+++ b/src/plugins/qmljseditor/quicktoolbarsettingspage.ui
@@ -17,23 +17,23 @@
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Quick Toolbars</string>
+      <string>Qt Quick Toolbars</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QCheckBox" name="textEditHelperCheckBox">
         <property name="text">
-         <string>Always show Quick Toolbar</string>
+         <string>Always show Qt Quick Toolbar</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="textEditHelperCheckBoxPin">
         <property name="toolTip">
-         <string>If enabled the toolbar will remain pinned to an absolute position.</string>
+         <string>If enabled, the toolbar will remain pinned to an absolute position.</string>
         </property>
         <property name="text">
-         <string>Pin Quick Toolbar</string>
+         <string>Pin Qt Quick Toolbar</string>
         </property>
        </widget>
       </item>
