--- a/src/plugins/debugger/startexternaldialog.ui
+++ b/src/plugins/debugger/startexternaldialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>425</width>
-    <height>127</height>
+    <height>151</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,7 +52,7 @@
       <widget class="Utils::PathChooser" name="execFile" native="true"/>
      </item>
      <item row="1" column="0">
-      <widget class="QLabel" name="argLabel">
+      <widget class="QLabel" name="argsLabel">
        <property name="text">
         <string>Arguments:</string>
        </property>
