--- a/src/plugins/projectexplorer/projectwizardpage.ui
+++ b/src/plugins/projectexplorer/projectwizardpage.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="title">
-   <string>Project management</string>
+   <string>Project Management</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
