Generic highlighter: Change some names for better clarity.
- Names of buttons, labels, dialogs, and methods.

--- a/src/plugins/texteditor/generichighlighter/managedefinitionsdialog.ui
+++ b/src/plugins/texteditor/generichighlighter/managedefinitionsdialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QGroupBox" name="definitionsGroupBox">
      <property name="title">
-      <string>Available Definitions</string>
+      <string>Definitions</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
