--- a/src/libs/extensionsystem/pluginerrorview.ui
+++ b/src/libs/extensionsystem/pluginerrorview.ui
@@ -32,7 +32,7 @@
      <item>
       <widget class="QLabel" name="label_2" >
        <property name="text" >
-        <string>Error Message:</string>
+        <string>Error message:</string>
        </property>
        <property name="alignment" >
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
